<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_btn"
        android:src="@drawable/leftarrowwhite" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_btn"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:padding="5dp"
            android:src="@drawable/avatar3"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/add_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-30dp"
            android:contentDescription="@string/add_btn"
            app:srcCompat="@drawable/plus"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                tools:ignore="LabelFor,TouchTargetSizeCheck"
                tools:text="Amir" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:padding="8dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                tools:ignore="LabelFor,TouchTargetSizeCheck"
                tools:text="I am Amir" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/save" />

    </LinearLayout>


</RelativeLayout>